# facebook-groups-bot

./: .gitignore  Makefile  README.md  Taskfile.yml  agent.py  analyzer.py  bot.py  config.py  convert_csv_to_xlsx.py  cookies.json  csv_handler.py  example.json  groups.py  main.py  pyproject.toml  scraper.py
config/bots/: car_buyers.yaml  leasing.yaml
src/: analyzer.py  bot_config.py  bot_processor.py  chatbot.py  clasify_posts.py  config.py  database.py  excel_exporter.py  group_inviter.py  group_processor.py  groups.py  job_manager.py  list_posts.py  main.py  messages.py  scrape.py  scraper.py  send_messages.py
src/admin_panel/: app.py  schemas.py
src/admin_panel/static/css/: styles.css
src/admin_panel/static/js/: app.js
src/admin_panel/templates/: base.html  index.html  index_new.html
src/admin_panel/templates/components/: active_jobs.html  bot_selector.html  navbar.html  scrape_date_modal.html  stats_cards.html
src/admin_panel/templates/partials/: contacted_tab.html  groups_tab.html  leads_tab.html  messages_tab.html
src/scripts/: check_sync_status.py  classify_posts.py  invite_users.py  list_posts.py  migrate_add_bot_id.py  migrate_multi_bot_system.py  scrape_posts.py  send_messages.py
