[project]
name = "facebook-groups-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.41.0",
    "rapidfuzz>=3.10.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]
